Update db migrate

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cp36696_brchinch
 DB_USERNAME=cp36696_brchinch
-DB_PASSWORD=4L5Um$C3Fdz$k\kY
+DB_PASSWORD=H3HNjzRNePM64Gba
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
