Add admin panel

--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:aucWyHeo22eO3wsAMVvk9MeG4artB9qkzJ7MEgT/I8w=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://br-chinchillas.ru
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=92.53.96.111
 DB_PORT=3306
 DB_DATABASE=cp36696_brchinch
 DB_USERNAME=cp36696_brchinch
